--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 theme: jekyll-theme-cayman
-title: "Algorithms in Programming"
+title: Algorithms in Programming
+author: Aidan Ho
+timezone: America/New_York
+url: https://aidanho1188.github.io/project2/
